--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.20.0",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-scroll-area": "^1.2.9",
@@ -19,7 +20,7 @@
     "clsx": "^2.1.1",
     "jspdf": "^3.0.0",
     "lucide-react": "^0.477.0",
-    "next": "14.2.16",
+    "next": "^15.3.2",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^3.0.2",
