--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
+# Database connection string
 DATABASE_URL="<your-database-connection-string>"
+
+
+# Environment variables for Clerk
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=<your-clerk-publishable-key>
+CLERK_SECRET_KEY=<your-clerk-secret-key>
