feat: remove login and register pages, integrate Clerk for authentication
- Deleted the login and register pages to streamline authentication process.
- Updated the home page to include SignInButton from Clerk for user login.
- Adjusted the call-to-action section to utilize Clerk's SignInButton for account creation.
- Updated the package.json and bun.lock to include new dependencies for AI SDK.
- Modified next.config.mjs to allow images from Clerk's domain.
- Enhanced Prisma schema to include Reply model for topic discussions.

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ DATABASE_URL="<your-database-connection-string>"
 
 # Environment variables for Clerk
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=<your-clerk-publishable-key>
-CLERK_SECRET_KEY=<your-clerk-secret-key>
+CLERK_SECRET_KEY="<your-clerk-secret-key>"
