--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.8.2",
+    "@ai-sdk/google": "^1.2.18",
+    "@ai-sdk/react": "^1.2.12",
     "@clerk/nextjs": "^6.20.0",
+    "@prisma/client": "^6.8.2",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jspdf": "^3.0.0",
